Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,33 +148,6 @@
     // Replace this with your actual news data.
     const newsData = [
   {
-    "title": "6 món ăn sáng giàu sắt giúp trẻ tăng tập trung",
-    "content": "Bài viết giới thiệu 6 món ăn sáng giàu sắt giúp trẻ tăng cường sự tập trung và hỗ trợ phát triển trí não. Sắt là chất dinh dưỡng thiết yếu cho trẻ em, giúp vận chuyển oxy và ngăn ngừa thiếu máu. Các món ăn như ngũ cốc nguyên hạt, loại đậu, trứng, bơ hạt và một số loại rau quả giàu sắt được khuyến nghị để đưa vào bữa sáng, giúp trẻ hấp thụ đủ sắt cần thiết cho sự phát triển.",
-    "link": "https://vnexpress.net/6-mon-an-sang-giau-sat-giup-tre-tang-tap-trung-4861763.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Có những món ăn sáng nào giàu sắt giúp trẻ tăng cường sự tập trung?",
-    "answers": [
-      {
-        "text": "Ngũ cốc nguyên hạt, các loại đậu, trứng, bơ hạt và rau quả",
-        "correct": true
-      },
-      {
-        "text": "Cơm, phở, bánh mì, thịt",
-        "correct": false
-      },
-      {
-        "text": "Cháo, mì tôm, trái cây tươi",
-        "correct": false
-      },
-      {
-        "text": "Bánh ngọt, kẹo, nước ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 yếu tố làm tăng nguy cơ ung thư đại trực tràng",
     "content": "Bài viết điểm qua 6 yếu tố chính làm tăng nguy cơ mắc ung thư đại trực tràng. Những yếu tố này bao gồm tuổi tác cao, di truyền, tiền sử gia đình có người mắc bệnh, chế độ ăn uống ít chất xơ và nhiều chất béo, ít vận động, béo phì, cũng như thói quen hút thuốc và uống rượu. Các bác sĩ khuyến cáo người từ 50 tuổi trở lên cần thường xuyên tầm soát ung thư đại trực tràng để phát hiện bệnh sớm.",
     "link": "https://vnexpress.net/6-yeu-to-lam-tang-nguy-co-ung-thu-dai-truc-trang-4861667.html",
@@ -206,6 +179,60 @@
     ]
   },
   {
+    "title": "6 món ăn sáng giàu sắt giúp trẻ tăng tập trung",
+    "content": "Bài viết giới thiệu 6 món ăn sáng giàu sắt giúp trẻ tăng cường sự tập trung và hỗ trợ phát triển trí não. Sắt là chất dinh dưỡng thiết yếu cho trẻ em, giúp vận chuyển oxy và ngăn ngừa thiếu máu. Các món ăn như ngũ cốc nguyên hạt, loại đậu, trứng, bơ hạt và một số loại rau quả giàu sắt được khuyến nghị để đưa vào bữa sáng, giúp trẻ hấp thụ đủ sắt cần thiết cho sự phát triển.",
+    "link": "https://vnexpress.net/6-mon-an-sang-giau-sat-giup-tre-tang-tap-trung-4861763.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Có những món ăn sáng nào giàu sắt giúp trẻ tăng cường sự tập trung?",
+    "answers": [
+      {
+        "text": "Ngũ cốc nguyên hạt, các loại đậu, trứng, bơ hạt và rau quả",
+        "correct": true
+      },
+      {
+        "text": "Cơm, phở, bánh mì, thịt",
+        "correct": false
+      },
+      {
+        "text": "Cháo, mì tôm, trái cây tươi",
+        "correct": false
+      },
+      {
+        "text": "Bánh ngọt, kẹo, nước ngọt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đi với cha để được \"học việc\" sớm, con trai tỷ phú Elon Musk gây sốt",
+    "content": "Bé X, con trai của tỷ phú Elon Musk, thường xuyên đi cùng cha trong các cuộc gặp gỡ công việc, nhằm học hỏi và quan sát cách xử lý công việc. Gần đây, bé đã có dịp vui đùa bên Tổng thống Mỹ Donald Trump khi cả hai cùng trên chuyến bay tới Florida. Sự xuất hiện của bé X bên những nhân vật quyền lực này đã thu hút sự chú ý lớn từ truyền thông và công chúng.",
+    "link": "https://dantri.com.vn/giao-duc/di-voi-cha-de-duoc-hoc-viec-som-con-trai-ty-phu-elon-musk-gay-sot-20250315152130109.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao bé X, con trai tỷ phú Elon Musk, lại gây sốt khi đi cùng cha?",
+    "answers": [
+      {
+        "text": "Vì bé X được gặp và vui đùa với Tổng thống Mỹ Donald Trump.",
+        "correct": true
+      },
+      {
+        "text": "Vì bé X học cách làm việc từ cha.",
+        "correct": false
+      },
+      {
+        "text": "Vì bé X là người thừa kế tiềm năng nhất.",
+        "correct": false
+      },
+      {
+        "text": "Vì bé X sở hữu nhiều tài năng đặc biệt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Huyết áp thế nào là bất thường?",
     "content": "Huyết áp được coi là bất thường khi có chỉ số tâm thu trên 140 mmHg hoặc tâm trương trên 90 mmHg. Theo câu hỏi của bác Nguyễn Văn Chiến, huyết áp của bác là 185/94 mmHg, thuộc nhóm tăng huyết áp và có thể gây nguy hiểm cho sức khỏe nếu không được kiểm soát. Để phòng tránh biến chứng, bác nên đến bệnh viện để khám và thay đổi chế độ ăn uống, tập luyện thể dục thường xuyên.",
     "link": "https://vnexpress.net/huyet-ap-the-nao-la-bat-thuong-4861752.html",
@@ -228,6 +255,64 @@
       },
       {
         "text": "Huyết áp luôn phải là 120/80 mmHg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao các trường không dừng dạy thêm ngay từ khi có quy định \"cấm\"?",
+    "content": "Bài viết bàn về lý do các trường vẫn tiếp tục dạy thêm mặc dù có quy định cấm từ Thông tư 29 của Bộ Giáo dục và Đào tạo. Thông tư này có hiệu lực vào thời điểm học sinh đang ôn thi cuối kỳ, khiến nhiều trường không kịp thời điều chỉnh kế hoạch giảng dạy. Việc dừng dạy thêm đột ngột đã gây ảnh hưởng tiêu cực đến tâm lý học sinh và phụ huynh. Nhiều trường đã thông báo sẽ dừng dạy thêm sau Tết Nguyên đán nhưng thực tế vẫn tiếp tục dạy thêm nhằm hỗ trợ học sinh ôn thi.",
+    "link": "https://dantri.com.vn/giao-duc/vi-sao-cac-truong-khong-dung-day-them-ngay-tu-khi-co-quy-dinh-cam-20250315233117356.htm",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao các trường không dừng dạy thêm ngay khi có quy định cấm?",
+    "answers": [
+      {
+        "text": "Vì thời điểm Thông tư ban hành trùng với kỳ thi cuối kỳ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có văn bản hướng dẫn kịp thời từ Sở giáo dục.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ nguồn lực để hỗ trợ học sinh khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì các trường không nhận được thông báo từ Bộ giáo dục.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trụ sở quận, huyện dôi dư sẽ là nguồn lực cho địa phương phát triển",
+    "content": "Đại biểu Tạ Văn Hạ cho rằng việc bỏ cấp hành chính quận, huyện sẽ giải phóng gần 700 trụ sở dôi dư, tạo cơ hội cho các địa phương phát triển kinh tế xã hội. Chính phủ và các địa phương cần rà soát, đánh giá lại tài sản công dôi dư và có phương án sử dụng hiệu quả, bao gồm chuyển đổi công năng hoặc hợp tác với khu vực tư nhân. Các trụ sở này có thể trở thành không gian công cộng, trung tâm văn hóa hoặc các cơ sở nghiên cứu khoa học.",
+    "link": "https://vnexpress.net/tru-so-quan-huyen-doi-du-se-la-nguon-luc-cho-dia-phuong-phat-trien-4857287.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việc bỏ cấp hành chính quận, huyện sẽ ảnh hưởng như thế nào đến các trụ sở dôi dư?",
+    "answers": [
+      {
+        "text": "Gần 700 trụ sở dôi dư sẽ được sử dụng để phát triển địa phương.",
+        "correct": true
+      },
+      {
+        "text": "Các trụ sở sẽ bị bỏ hoang và không được sử dụng.",
+        "correct": false
+      },
+      {
+        "text": "Không có ảnh hưởng gì đến các trụ sở dôi dư.",
+        "correct": false
+      },
+      {
+        "text": "Tài sản sẽ bị thất thu cho Nhà nước.",
+        "correct": false
+      },
+      {
+        "text": "Trụ sở sẽ được giữ nguyên như hiện tại.",
         "correct": false
       }
     ]
@@ -345,28 +430,32 @@
     ]
   },
   {
-    "title": "Kết hôn khiến đàn ông béo phì nhiều hơn phụ nữ",
-    "content": "Một nghiên cứu tại Viện Tim mạch Quốc gia ở Warsaw cho thấy nam giới kết hôn có nguy cơ béo phì cao gấp 3,2 lần so với những người độc thân, trong khi phụ nữ không bị ảnh hưởng tương tự. Hôn nhân làm tăng nguy cơ thừa cân ở nam giới lên 62% và 39% ở nữ giới. Các yếu tố như khẩu phần ăn lớn hơn và hoạt động thể chất giảm sau khi kết hôn là nguyên nhân chính. Nghiên cứu nhấn mạnh tầm quan trọng của các chính sách hỗ trợ lựa chọn ăn uống lành mạnh để ngăn ngừa tình trạng béo phì.",
-    "link": "https://vnexpress.net/ket-hon-khien-dan-ong-beo-phi-nhieu-hon-phu-nu-4861469.html",
+    "title": "Suýt chết do lao phổi",
+    "content": "Một người phụ nữ 30 tuổi ở Hà Nội đã phải nhập viện trong tình trạng nghiêm trọng do lao phổi không được điều trị dứt điểm trong suốt 10 năm. Bệnh nhân đã phát triển thêm bệnh lupus ban đỏ hệ thống, khiến tình trạng sức khỏe trở nên phức tạp với nhiều biến chứng như suy hô hấp và rối loạn đông máu. Sau khi điều trị bằng phương pháp ECMO và thay huyết tương, bệnh nhân đã phục hồi và có thể tự thở trở lại. Đây là lời nhắc nhở về tầm quan trọng của việc tuân thủ điều trị bệnh lao và khám sức khỏe định kỳ.",
+    "link": "https://vnexpress.net/suyt-chet-do-lao-phoi-4861194.html",
     "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao nam giới kết hôn có nguy cơ béo phì cao hơn phụ nữ?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Nguyên nhân nào khiến người phụ nữ 30 tuổi suýt chết?",
     "answers": [
       {
-        "text": "Vì lối sống và khẩu phần ăn không lành mạnh hơn",
+        "text": "Bệnh lao phổi không điều trị dứt điểm",
         "correct": true
       },
       {
-        "text": "Họ có nhiều hoạt động thể chất hơn",
+        "text": "Tác động của ô nhiễm môi trường",
         "correct": false
       },
       {
-        "text": "Họ ăn ít hơn sau khi kết hôn",
+        "text": "Thiếu dinh dưỡng",
         "correct": false
       },
       {
-        "text": "Họ không thay đổi thói quen ăn uống",
+        "text": "Mắc bệnh tim mạch",
+        "correct": false
+      },
+      {
+        "text": "Lạm dụng thuốc kháng sinh",
         "correct": false
       }
     ]
@@ -399,32 +488,28 @@
     ]
   },
   {
-    "title": "Suýt chết do lao phổi",
-    "content": "Một người phụ nữ 30 tuổi ở Hà Nội đã phải nhập viện trong tình trạng nghiêm trọng do lao phổi không được điều trị dứt điểm trong suốt 10 năm. Bệnh nhân đã phát triển thêm bệnh lupus ban đỏ hệ thống, khiến tình trạng sức khỏe trở nên phức tạp với nhiều biến chứng như suy hô hấp và rối loạn đông máu. Sau khi điều trị bằng phương pháp ECMO và thay huyết tương, bệnh nhân đã phục hồi và có thể tự thở trở lại. Đây là lời nhắc nhở về tầm quan trọng của việc tuân thủ điều trị bệnh lao và khám sức khỏe định kỳ.",
-    "link": "https://vnexpress.net/suyt-chet-do-lao-phoi-4861194.html",
+    "title": "Kết hôn khiến đàn ông béo phì nhiều hơn phụ nữ",
+    "content": "Một nghiên cứu tại Viện Tim mạch Quốc gia ở Warsaw cho thấy nam giới kết hôn có nguy cơ béo phì cao gấp 3,2 lần so với những người độc thân, trong khi phụ nữ không bị ảnh hưởng tương tự. Hôn nhân làm tăng nguy cơ thừa cân ở nam giới lên 62% và 39% ở nữ giới. Các yếu tố như khẩu phần ăn lớn hơn và hoạt động thể chất giảm sau khi kết hôn là nguyên nhân chính. Nghiên cứu nhấn mạnh tầm quan trọng của các chính sách hỗ trợ lựa chọn ăn uống lành mạnh để ngăn ngừa tình trạng béo phì.",
+    "link": "https://vnexpress.net/ket-hon-khien-dan-ong-beo-phi-nhieu-hon-phu-nu-4861469.html",
     "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Nguyên nhân nào khiến người phụ nữ 30 tuổi suýt chết?",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao nam giới kết hôn có nguy cơ béo phì cao hơn phụ nữ?",
     "answers": [
       {
-        "text": "Bệnh lao phổi không điều trị dứt điểm",
+        "text": "Vì lối sống và khẩu phần ăn không lành mạnh hơn",
         "correct": true
       },
       {
-        "text": "Tác động của ô nhiễm môi trường",
+        "text": "Họ có nhiều hoạt động thể chất hơn",
         "correct": false
       },
       {
-        "text": "Thiếu dinh dưỡng",
+        "text": "Họ ăn ít hơn sau khi kết hôn",
         "correct": false
       },
       {
-        "text": "Mắc bệnh tim mạch",
-        "correct": false
-      },
-      {
-        "text": "Lạm dụng thuốc kháng sinh",
+        "text": "Họ không thay đổi thói quen ăn uống",
         "correct": false
       }
     ]
@@ -2412,6 +2497,33 @@
     ]
   },
   {
+    "title": "Phạt đòn trẻ là biện pháp có tính giáo dục, không nên cấm?",
+    "content": "Giáo sư Robert Larzelere từ Đại học bang Oklahoma cho rằng việc cha mẹ phạt đòn con có thể là một biện pháp giáo dục hiệu quả nếu áp dụng đúng cách. Ông phản biện lại quan điểm cấm phạt đòn trẻ nhỏ, cho rằng nó có thể giúp trẻ hiểu hậu quả của hành động và phát triển tốt hơn. Mặc dù một số chuyên gia cho rằng phạt đòn đã lỗi thời, Larzelere nhấn mạnh rằng biện pháp này cần được thực hiện một cách tiết chế và chỉ khi các phương pháp khác không có hiệu quả.",
+    "link": "https://dantri.com.vn/giao-duc/phat-don-tre-la-bien-phap-co-tinh-giao-duc-khong-nen-cam-20250315082156697.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Phạt đòn trẻ có thực sự có tính giáo dục không?",
+    "answers": [
+      {
+        "text": "Có, nếu áp dụng đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên dùng.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên dùng trong trường hợp khẩn cấp.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ áp dụng cho trẻ lớn hơn 12 tuổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ai dễ mắc và tái phát zona thần kinh?",
     "content": "Bài viết đề cập đến những người có nguy cơ cao mắc và tái phát zona thần kinh, bao gồm những người mắc bệnh nền như tiểu đường, tăng huyết áp, bệnh tim mạch và rối loạn lipid máu. Các bệnh lý này làm suy giảm hệ miễn dịch, tạo điều kiện cho virus Varicella Zoster hoạt động trở lại sau thời gian 'ngủ đông'. Để phòng ngừa, bác sĩ khuyến cáo người dân nên tiêm vaccine thủy đậu và zona thần kinh, đặc biệt là cho những người từ 50 tuổi trở lên hoặc có nguy cơ cao.",
     "link": "https://vnexpress.net/ai-de-mac-va-tai-phat-zona-than-kinh-4861703.html",
@@ -2438,33 +2550,6 @@
       },
       {
         "text": "Người cao tuổi không mắc bệnh nền",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phạt đòn trẻ là biện pháp có tính giáo dục, không nên cấm?",
-    "content": "Giáo sư Robert Larzelere từ Đại học bang Oklahoma cho rằng việc cha mẹ phạt đòn con có thể là một biện pháp giáo dục hiệu quả nếu áp dụng đúng cách. Ông phản biện lại quan điểm cấm phạt đòn trẻ nhỏ, cho rằng nó có thể giúp trẻ hiểu hậu quả của hành động và phát triển tốt hơn. Mặc dù một số chuyên gia cho rằng phạt đòn đã lỗi thời, Larzelere nhấn mạnh rằng biện pháp này cần được thực hiện một cách tiết chế và chỉ khi các phương pháp khác không có hiệu quả.",
-    "link": "https://dantri.com.vn/giao-duc/phat-don-tre-la-bien-phap-co-tinh-giao-duc-khong-nen-cam-20250315082156697.htm",
-    "cat": "giao-duc",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Phạt đòn trẻ có thực sự có tính giáo dục không?",
-    "answers": [
-      {
-        "text": "Có, nếu áp dụng đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên dùng.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên dùng trong trường hợp khẩn cấp.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ áp dụng cho trẻ lớn hơn 12 tuổi.",
         "correct": false
       }
     ]
