Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Mùa hoa muôn sắc trên đỉnh Sa Mù ở tây Trường Sơn",
+    "content": "Mùa hoa tháng 3 trên đỉnh đèo Sa Mù, tỉnh Quảng Trị, tạo nên bức tranh thiên nhiên rực rỡ với nhiều loại hoa dại như hoa trẩu, hoa mua và hoa râm. Đỉnh đèo nằm ở độ cao hơn 1.000m, khí hậu mát mẻ, thường có mây mù. Đèo Sa Mù không chỉ là điểm giao thương mà còn là điểm đến lý tưởng cho du khách và phượt thủ khám phá vẻ đẹp hoang dã và hệ sinh thái đa dạng. Ngoài hoa nở, khu vực này còn có đời sống văn hóa phong phú của người Vân Kiều bản địa.",
+    "link": "https://tuoitre.vn/mua-hoa-muon-sac-tren-dinh-sa-mu-o-tay-truong-son-20250318205435865.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Mùa hoa ở đỉnh Sa Mù có những loại hoa nào nổi bật?",
+    "answers": [
+      {
+        "text": "Hoa trẩu, hoa mua, hoa râm",
+        "correct": true
+      },
+      {
+        "text": "Hoa cẩm chướng, hoa hồng, hoa lan",
+        "correct": false
+      },
+      {
+        "text": "Hoa hướng dương, hoa violet, hoa thược dược",
+        "correct": false
+      },
+      {
+        "text": "Hoa nhài, hoa cúc, hoa ly",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tàu ngầm của Mỹ hiện diện ngoài khơi Australia",
     "content": "Tàu ngầm tấn công lớp Virginia USS Minnesota của Mỹ đã cập cảng HMAS Stirling tại Australia, đánh dấu sự hiện diện của tàu ngầm hạt nhân Mỹ thứ 7 kể từ khi thỏa thuận AUKUS được ký kết vào năm 2021. USS Minnesota sẽ lưu trú tại đây và là một phần trong kế hoạch tăng cường lực lượng hải quân Mỹ tại khu vực Ấn Độ Dương - Thái Bình Dương. Dự kiến, Australia sẽ biên chế thêm nhiều nhân sự để hỗ trợ cho hoạt động tàu ngầm hạt nhân trong tương lai.",
     "link": "https://dantri.com.vn/the-gioi/tau-ngam-cua-my-hien-dien-ngoai-khoi-australia-20250317144812745.htm",
@@ -165,33 +192,6 @@
       },
       {
         "text": "Vì anh bỏ cuộc giữa chừng.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "NSƯT Bùi Như Lai \"Cha tôi, người ở lại\": Nhận mình lạnh lùng, sợ… nổi tiếng",
-    "content": "NSƯT Bùi Như Lai chia sẻ về cuộc sống và vai diễn trong bộ phim \"Cha tôi, người ở lại\", một tác phẩm Việt hóa từ phim Trung Quốc. Anh tự nhận mình là người lạnh lùng, không thích nổi tiếng và thường dành thời gian cho công việc quản lý tại Trường Đại học Sân khấu - Điện ảnh Hà Nội. Bùi Như Lai cũng nhấn mạnh tầm quan trọng của việc giữ gìn sự gần gũi với khán giả thông qua các vai diễn, mặc dù không muốn trở thành một ngôi sao giải trí. Anh đang hài lòng với cuộc sống bình dị cùng gia đình và công việc nghệ thuật.",
-    "link": "https://dantri.com.vn/giai-tri/nsut-bui-nhu-lai-cha-toi-nguoi-o-lai-nhan-minh-lanh-lung-so-noi-tieng-20250317220936197.htm",
-    "cat": "giai-tri",
-    "positivity": 7,
-    "importance": 6,
-    "question": "NSƯT Bùi Như Lai có những suy nghĩ gì về việc nổi tiếng?",
-    "answers": [
-      {
-        "text": "Anh không thích nổi tiếng và tự nhận mình lạnh lùng.",
-        "correct": true
-      },
-      {
-        "text": "Anh mong muốn trở thành một ngôi sao giải trí.",
-        "correct": false
-      },
-      {
-        "text": "Anh muốn tham gia nhiều phim truyền hình.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến sự nổi tiếng trong ngành giải trí.",
         "correct": false
       }
     ]
@@ -335,6 +335,33 @@
       },
       {
         "text": "Vì không cho con ăn uống đầy đủ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "NSƯT Bùi Như Lai \"Cha tôi, người ở lại\": Nhận mình lạnh lùng, sợ… nổi tiếng",
+    "content": "NSƯT Bùi Như Lai chia sẻ về cuộc sống và vai diễn trong bộ phim \"Cha tôi, người ở lại\", một tác phẩm Việt hóa từ phim Trung Quốc. Anh tự nhận mình là người lạnh lùng, không thích nổi tiếng và thường dành thời gian cho công việc quản lý tại Trường Đại học Sân khấu - Điện ảnh Hà Nội. Bùi Như Lai cũng nhấn mạnh tầm quan trọng của việc giữ gìn sự gần gũi với khán giả thông qua các vai diễn, mặc dù không muốn trở thành một ngôi sao giải trí. Anh đang hài lòng với cuộc sống bình dị cùng gia đình và công việc nghệ thuật.",
+    "link": "https://dantri.com.vn/giai-tri/nsut-bui-nhu-lai-cha-toi-nguoi-o-lai-nhan-minh-lanh-lung-so-noi-tieng-20250317220936197.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 6,
+    "question": "NSƯT Bùi Như Lai có những suy nghĩ gì về việc nổi tiếng?",
+    "answers": [
+      {
+        "text": "Anh không thích nổi tiếng và tự nhận mình lạnh lùng.",
+        "correct": true
+      },
+      {
+        "text": "Anh mong muốn trở thành một ngôi sao giải trí.",
+        "correct": false
+      },
+      {
+        "text": "Anh muốn tham gia nhiều phim truyền hình.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến sự nổi tiếng trong ngành giải trí.",
         "correct": false
       }
     ]
@@ -2133,37 +2160,6 @@
     ]
   },
   {
-    "title": "Dự kiến hoàn thành sáp nhập các tỉnh thành trước 30/8",
-    "content": "Bộ trưởng Nội vụ Phạm Thị Thanh Trà thông báo rằng việc sáp nhập các tỉnh thành trên toàn quốc sẽ hoàn tất trước ngày 30/8 và sẽ chính thức đi vào hoạt động từ tháng 9. Cùng với đó, việc sáp nhập các đơn vị hành chính cấp xã cũng sẽ hoàn thành trước 30/6. Bộ trưởng nhấn mạnh rằng quy trình này cần được thực hiện thận trọng, kỹ lưỡng và hiệu quả, đồng thời kêu gọi sự phối hợp chặt chẽ từ các bộ ngành để đảm bảo tiến độ thực hiện.",
-    "link": "https://vnexpress.net/du-kien-hoan-thanh-sap-nhap-cac-tinh-thanh-truoc-30-8-4862794.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Khi nào việc sáp nhập các tỉnh thành sẽ hoàn tất?",
-    "answers": [
-      {
-        "text": "Trước 30/8",
-        "correct": true
-      },
-      {
-        "text": "Trước 30/6",
-        "correct": false
-      },
-      {
-        "text": "Trước 1/7",
-        "correct": false
-      },
-      {
-        "text": "Vào tháng 9",
-        "correct": false
-      },
-      {
-        "text": "Vào cuối năm 2025",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bộ ngành giảm 22.000 biên chế sau tinh gọn",
     "content": "Các bộ, cơ quan ngang bộ và cơ quan thuộc Chính phủ đã giảm 22.323 biên chế, chiếm 20% tổng biên chế, trong quá trình tinh gọn bộ máy. Bộ trưởng Nội vụ, Phạm Thị Thanh Trà, cho biết đã giảm 13 tổng cục và tổ chức tương đương, cùng với nhiều cục, vụ và chi cục. Việc cải cách này được coi là một cuộc cách mạng trong hệ thống chính trị và nhằm nâng cao hiệu quả quản lý. Tuy nhiên, vẫn còn tồn tại tình trạng chồng chéo giữa các luật chuyên ngành cần được giải quyết.",
     "link": "https://vnexpress.net/bo-nganh-giam-22-000-bien-che-sau-tinh-gon-4862794.html",
@@ -2195,32 +2191,32 @@
     ]
   },
   {
-    "title": "Giảm 11 kg, giảm bệnh nền",
-    "content": "Chị Hà, 31 tuổi, đã giảm 11 kg sau khi điều trị béo phì tại Bệnh viện Đa khoa Tâm Anh TP HCM, giúp cải thiện tình trạng rối loạn kinh nguyệt và gan nhiễm mỡ. Khi bắt đầu, chị nặng gần 90 kg và mắc nhiều bệnh liên quan đến béo phì. Sau hai tháng áp dụng liệu trình giảm cân kết hợp thuốc và chế độ ăn uống hợp lý, sức khỏe của chị đã cải thiện rõ rệt, chu kỳ kinh nguyệt trở lại bình thường và các chỉ số sức khỏe cải thiện.",
-    "link": "https://vnexpress.net/giam-11-kg-giam-benh-nen-4862793.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Hà đã giảm được bao nhiêu kg và tình trạng sức khỏe có cải thiện không?",
+    "title": "Dự kiến hoàn thành sáp nhập các tỉnh thành trước 30/8",
+    "content": "Bộ trưởng Nội vụ Phạm Thị Thanh Trà thông báo rằng việc sáp nhập các tỉnh thành trên toàn quốc sẽ hoàn tất trước ngày 30/8 và sẽ chính thức đi vào hoạt động từ tháng 9. Cùng với đó, việc sáp nhập các đơn vị hành chính cấp xã cũng sẽ hoàn thành trước 30/6. Bộ trưởng nhấn mạnh rằng quy trình này cần được thực hiện thận trọng, kỹ lưỡng và hiệu quả, đồng thời kêu gọi sự phối hợp chặt chẽ từ các bộ ngành để đảm bảo tiến độ thực hiện.",
+    "link": "https://vnexpress.net/du-kien-hoan-thanh-sap-nhap-cac-tinh-thanh-truoc-30-8-4862794.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Khi nào việc sáp nhập các tỉnh thành sẽ hoàn tất?",
     "answers": [
       {
-        "text": "11 kg, sức khỏe cải thiện rõ rệt",
+        "text": "Trước 30/8",
         "correct": true
       },
       {
-        "text": "10 kg, sức khỏe không thay đổi",
+        "text": "Trước 30/6",
         "correct": false
       },
       {
-        "text": "12 kg, sức khỏe xấu hơn",
+        "text": "Trước 1/7",
         "correct": false
       },
       {
-        "text": "9 kg, không có thay đổi nào",
+        "text": "Vào tháng 9",
         "correct": false
       },
       {
-        "text": "8 kg, sức khỏe tệ hơn",
+        "text": "Vào cuối năm 2025",
         "correct": false
       }
     ]
@@ -2248,6 +2244,37 @@
       },
       {
         "text": "Đỗ xe một chiều và đỗ xe hai chiều",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Giảm 11 kg, giảm bệnh nền",
+    "content": "Chị Hà, 31 tuổi, đã giảm 11 kg sau khi điều trị béo phì tại Bệnh viện Đa khoa Tâm Anh TP HCM, giúp cải thiện tình trạng rối loạn kinh nguyệt và gan nhiễm mỡ. Khi bắt đầu, chị nặng gần 90 kg và mắc nhiều bệnh liên quan đến béo phì. Sau hai tháng áp dụng liệu trình giảm cân kết hợp thuốc và chế độ ăn uống hợp lý, sức khỏe của chị đã cải thiện rõ rệt, chu kỳ kinh nguyệt trở lại bình thường và các chỉ số sức khỏe cải thiện.",
+    "link": "https://vnexpress.net/giam-11-kg-giam-benh-nen-4862793.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Hà đã giảm được bao nhiêu kg và tình trạng sức khỏe có cải thiện không?",
+    "answers": [
+      {
+        "text": "11 kg, sức khỏe cải thiện rõ rệt",
+        "correct": true
+      },
+      {
+        "text": "10 kg, sức khỏe không thay đổi",
+        "correct": false
+      },
+      {
+        "text": "12 kg, sức khỏe xấu hơn",
+        "correct": false
+      },
+      {
+        "text": "9 kg, không có thay đổi nào",
+        "correct": false
+      },
+      {
+        "text": "8 kg, sức khỏe tệ hơn",
         "correct": false
       }
     ]
