Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,33 @@
     ]
   },
   {
+    "title": "Hoa hậu Ý Nhi đi thi quốc tế: Hoãn du học, nhan sắc khác lạ gây chú ý",
+    "content": "Hoa hậu Ý Nhi đã quyết định hoãn việc học tại Australia để tập trung cho cuộc thi Hoa hậu Thế giới 2025, diễn ra từ ngày 7/5 đến 31/5 tại Ấn Độ. Cô dành thời gian rèn luyện kỹ năng và thể lực để chuẩn bị cho cuộc thi, đồng thời cho biết đã can thiệp thẩm mỹ để cải thiện nhan sắc. Ý Nhi cũng khẳng định sẽ tiếp tục dự án nhân ái \"Heart to Head\" sau khi hoàn thành cuộc thi, nhằm hỗ trợ các trường học khó khăn tại Việt Nam.",
+    "link": "https://dantri.com.vn/giai-tri/hoa-hau-y-nhi-di-thi-quoc-te-hoan-du-hoc-nhan-sac-khac-la-gay-chu-y-20250319032449649.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Hoa hậu Ý Nhi hoãn việc học tại Australia?",
+    "answers": [
+      {
+        "text": "Để tập trung cho cuộc thi Hoa hậu Thế giới 2025",
+        "correct": true
+      },
+      {
+        "text": "Để đi du lịch",
+        "correct": false
+      },
+      {
+        "text": "Để tham gia một dự án từ thiện",
+        "correct": false
+      },
+      {
+        "text": "Để nghỉ ngơi và thư giãn",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tàu ngầm của Mỹ hiện diện ngoài khơi Australia",
     "content": "Tàu ngầm tấn công lớp Virginia USS Minnesota của Mỹ đã cập cảng HMAS Stirling tại Australia, đánh dấu sự hiện diện của tàu ngầm hạt nhân Mỹ thứ 7 kể từ khi thỏa thuận AUKUS được ký kết vào năm 2021. USS Minnesota sẽ lưu trú tại đây và là một phần trong kế hoạch tăng cường lực lượng hải quân Mỹ tại khu vực Ấn Độ Dương - Thái Bình Dương. Dự kiến, Australia sẽ biên chế thêm nhiều nhân sự để hỗ trợ cho hoạt động tàu ngầm hạt nhân trong tương lai.",
     "link": "https://dantri.com.vn/the-gioi/tau-ngam-cua-my-hien-dien-ngoai-khoi-australia-20250317144812745.htm",
@@ -192,33 +219,6 @@
       },
       {
         "text": "Vì anh bỏ cuộc giữa chừng.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bắc thang gần 4 m vào nhà tại công trường Vành đai 3 TP HCM",
-    "content": "Nhiều hộ dân tại xa lộ Hà Nội, gần cầu vượt Tân Vạn, TP Dĩ An đang phải bắc thang cao gần 4 m để vào nhà do công trình Vành đai 3 TP HCM thi công, khiến mặt đường hạ thấp hơn so với nhà. Tình trạng này đã diễn ra từ cuối năm ngoái, gây khó khăn trong việc đi lại và buôn bán của người dân. Họ cho biết thu nhập giảm sút nghiêm trọng do công trường thi công, khiến khách hàng không còn ghé thăm như trước.",
-    "link": "https://vnexpress.net/bac-thang-gan-4-m-vao-nha-tai-cong-truong-vanh-dai-3-tp-hcm-4862463.html",
-    "cat": "thoi-su",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao nhiều hộ dân ở xa lộ Hà Nội phải bắc thang vào nhà?",
-    "answers": [
-      {
-        "text": "Vì mặt đường công trình Vành đai 3 hạ thấp hơn nhà.",
-        "correct": true
-      },
-      {
-        "text": "Do nhà bị giải tỏa một phần.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn làm đẹp cho ngôi nhà.",
-        "correct": false
-      },
-      {
-        "text": "Do thời tiết xấu làm hỏng cầu thang.",
         "correct": false
       }
     ]
@@ -362,6 +362,33 @@
       },
       {
         "text": "Anh không quan tâm đến sự nổi tiếng trong ngành giải trí.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bắc thang gần 4 m vào nhà tại công trường Vành đai 3 TP HCM",
+    "content": "Nhiều hộ dân tại xa lộ Hà Nội, gần cầu vượt Tân Vạn, TP Dĩ An đang phải bắc thang cao gần 4 m để vào nhà do công trình Vành đai 3 TP HCM thi công, khiến mặt đường hạ thấp hơn so với nhà. Tình trạng này đã diễn ra từ cuối năm ngoái, gây khó khăn trong việc đi lại và buôn bán của người dân. Họ cho biết thu nhập giảm sút nghiêm trọng do công trường thi công, khiến khách hàng không còn ghé thăm như trước.",
+    "link": "https://vnexpress.net/bac-thang-gan-4-m-vao-nha-tai-cong-truong-vanh-dai-3-tp-hcm-4862463.html",
+    "cat": "thoi-su",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao nhiều hộ dân ở xa lộ Hà Nội phải bắc thang vào nhà?",
+    "answers": [
+      {
+        "text": "Vì mặt đường công trình Vành đai 3 hạ thấp hơn nhà.",
+        "correct": true
+      },
+      {
+        "text": "Do nhà bị giải tỏa một phần.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn làm đẹp cho ngôi nhà.",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết xấu làm hỏng cầu thang.",
         "correct": false
       }
     ]
@@ -2160,37 +2187,6 @@
     ]
   },
   {
-    "title": "Bộ ngành giảm 22.000 biên chế sau tinh gọn",
-    "content": "Các bộ, cơ quan ngang bộ và cơ quan thuộc Chính phủ đã giảm 22.323 biên chế, chiếm 20% tổng biên chế, trong quá trình tinh gọn bộ máy. Bộ trưởng Nội vụ, Phạm Thị Thanh Trà, cho biết đã giảm 13 tổng cục và tổ chức tương đương, cùng với nhiều cục, vụ và chi cục. Việc cải cách này được coi là một cuộc cách mạng trong hệ thống chính trị và nhằm nâng cao hiệu quả quản lý. Tuy nhiên, vẫn còn tồn tại tình trạng chồng chéo giữa các luật chuyên ngành cần được giải quyết.",
-    "link": "https://vnexpress.net/bo-nganh-giam-22-000-bien-che-sau-tinh-gon-4862794.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Bộ ngành đã giảm bao nhiêu biên chế trong quá trình tinh gọn?",
-    "answers": [
-      {
-        "text": "22.323 biên chế",
-        "correct": true
-      },
-      {
-        "text": "15.000 biên chế",
-        "correct": false
-      },
-      {
-        "text": "30.000 biên chế",
-        "correct": false
-      },
-      {
-        "text": "10.000 biên chế",
-        "correct": false
-      },
-      {
-        "text": "18.500 biên chế",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự kiến hoàn thành sáp nhập các tỉnh thành trước 30/8",
     "content": "Bộ trưởng Nội vụ Phạm Thị Thanh Trà thông báo rằng việc sáp nhập các tỉnh thành trên toàn quốc sẽ hoàn tất trước ngày 30/8 và sẽ chính thức đi vào hoạt động từ tháng 9. Cùng với đó, việc sáp nhập các đơn vị hành chính cấp xã cũng sẽ hoàn thành trước 30/6. Bộ trưởng nhấn mạnh rằng quy trình này cần được thực hiện thận trọng, kỹ lưỡng và hiệu quả, đồng thời kêu gọi sự phối hợp chặt chẽ từ các bộ ngành để đảm bảo tiến độ thực hiện.",
     "link": "https://vnexpress.net/du-kien-hoan-thanh-sap-nhap-cac-tinh-thanh-truoc-30-8-4862794.html",
@@ -2217,6 +2213,37 @@
       },
       {
         "text": "Vào cuối năm 2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bộ ngành giảm 22.000 biên chế sau tinh gọn",
+    "content": "Các bộ, cơ quan ngang bộ và cơ quan thuộc Chính phủ đã giảm 22.323 biên chế, chiếm 20% tổng biên chế, trong quá trình tinh gọn bộ máy. Bộ trưởng Nội vụ, Phạm Thị Thanh Trà, cho biết đã giảm 13 tổng cục và tổ chức tương đương, cùng với nhiều cục, vụ và chi cục. Việc cải cách này được coi là một cuộc cách mạng trong hệ thống chính trị và nhằm nâng cao hiệu quả quản lý. Tuy nhiên, vẫn còn tồn tại tình trạng chồng chéo giữa các luật chuyên ngành cần được giải quyết.",
+    "link": "https://vnexpress.net/bo-nganh-giam-22-000-bien-che-sau-tinh-gon-4862794.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Bộ ngành đã giảm bao nhiêu biên chế trong quá trình tinh gọn?",
+    "answers": [
+      {
+        "text": "22.323 biên chế",
+        "correct": true
+      },
+      {
+        "text": "15.000 biên chế",
+        "correct": false
+      },
+      {
+        "text": "30.000 biên chế",
+        "correct": false
+      },
+      {
+        "text": "10.000 biên chế",
+        "correct": false
+      },
+      {
+        "text": "18.500 biên chế",
         "correct": false
       }
     ]
